<resources>
    <string name="app_name">GhostRunner</string>
    <string name="google_app_id">GhostRunnerId</string>
    <string name="action_settings">Settings</string>
    <string name="coordinate">Coordinates</string>
    <string name="title_activity_new_run">NewRun</string>
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="save_btn">Save</string>
    <string name="menu_btn">Menu</string>
    <string name="delete_btn">Delete</string>
    <string name="title_activity_list_run">Choose a Ghost to compete with: </string>
    <string name="title_activity_ghost_compete">GhostRun</string>
    <string name="distance_title">Distance: </string>
    <string name="time_title">Time: </string>
    <string name="speed_title">Average pace: </string>
    <string name="list_btn">Choose a Ghost</string>
    <string name="new_run_btn">New Run</string>
    <string name="nameOfRun">Name your Ghost</string>
    <string name="update_btn">Replace your Ghost</string>
    <string name="save_ghost_compete_btn">Save as a new Ghost</string>
    <string name="title_activity_settings">Settings</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>
    <string name="feedback">Feedback Interval</string>
    <string name="ghostRunner">GhostRunner</string>


</resources>
