<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewRun"
    tools:showIn="@layout/activity_new_run"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/distanceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_title"
            android:layout_marginTop="20dp"
            android:textSize="40dip">
        </TextView>

        <TextView
            android:id="@+id/showDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight ="true"
            android:text="0"
            android:textSize="40dip" >
        </TextView>

        <TextView
            android:id="@+id/timeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_title"
            android:layout_below="@id/distanceTitle"
            android:textSize="40dip" >
        </TextView>

        <TextView
            android:id="@+id/showTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight ="true"
            android:layout_below="@id/showDistance"
            android:text="0"
            android:textSize="40dip" >
        </TextView>

        <TextView
            android:id="@+id/speedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_title"
            android:layout_below="@id/timeTitle"
            android:textSize="40dip" >
        </TextView>

        <TextView
            android:id="@+id/showSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight ="true"
            android:layout_below="@id/showTime"
            android:text="0"
            android:textSize="40dip" >
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <Button android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_btn"
        android:onClick="startRun"
        android:textColor="#1c3920"
        android:buttonStyle="@style/CKButton"
        android:background="@drawable/round_shape_button"
        android:layout_alignParentBottom ="true"
        android:layout_marginBottom="20dp"
        />

    <Button android:id="@+id/stopBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_btn"
        android:onClick="stopRun"
        android:textColor="#1c3920"
        android:textSize="30dip"
        android:background="@drawable/round_shape_button"
        android:layout_alignParentBottom ="true"
        android:layout_marginBottom="20dp"

        />

        <Button android:id="@+id/saveRunBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/menuBtn"
            android:text="@string/save_btn"
            android:onClick="saveRun"
            android:textColor="#1c3920"
            android:textSize="30dip"
            android:background="@drawable/round_shape_button"
            android:layout_marginBottom="20dp"
            />

        <Button android:id="@+id/menuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_btn"
            android:onClick="menu"
            android:textColor="#1c3920"
            android:textSize="30dip"
            android:background="@drawable/round_shape_button"
            android:layout_alignParentBottom ="true"
            android:layout_marginBottom="20dp"
            />




    </RelativeLayout>
</LinearLayout>
