<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GhostCompete"
    tools:showIn="@layout/activity_new_run"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/RelativeLayoutInfoGhostCompetePerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/distanceTitlePerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_title"
            android:layout_marginTop="20dp"
            android:textViewStyle="@style/displayRun" />

        <TextView
            android:id="@+id/showDistancePerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight ="true"
            android:text="0 km"
            android:textViewStyle="@style/displayRun"/>

        <TextView
            android:id="@+id/timeTitlePerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_title"
            android:layout_below="@id/distanceTitlePerson"
            android:textViewStyle="@style/displayRun" />

        <TextView
            android:id="@+id/showTimePerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight ="true"
            android:layout_below="@id/showDistancePerson"
            android:text="0"
            android:textViewStyle="@style/displayRun" />

        <TextView
            android:id="@+id/speedTitlePerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_title"
            android:layout_below="@id/timeTitlePerson"
            android:textViewStyle="@style/displayRun" />

        <TextView
            android:id="@+id/showSpeedPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight ="true"
            android:layout_below="@id/showTimePerson"
            android:text="0 min/km"
            android:textViewStyle="@style/displayRun" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDisplayRunText"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <RelativeLayout
        android:id="@+id/RelativeLayoutInfoGhostCompeteGhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTitleGhost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name: "
            android:textColor="@color/colorGhostGrey"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/nameTextGhost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorGhostGrey"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/distanceTitleGhost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_title"
            android:layout_below="@id/nameTitleGhost"
            android:textViewStyle="@style/displayRun"
            android:textColor="@color/colorGhostGrey" />

        <TextView
            android:id="@+id/showDistanceGhost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight ="true"
            android:layout_below="@id/nameTextGhost"

            android:text="0 km"
            android:textViewStyle="@style/displayRun"
            android:textColor="@color/colorGhostGrey" />

        <TextView
            android:id="@+id/timeTitleGhost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_title"
            android:layout_below="@id/distanceTitleGhost"
            android:textViewStyle="@style/displayRun"
            android:textColor="@color/colorGhostGrey" />

        <TextView
            android:id="@+id/showTimeGhost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight ="true"
            android:layout_below="@id/showDistanceGhost"
            android:text="0"
            android:textViewStyle="@style/displayRun"
            android:textColor="@color/colorGhostGrey" />

        <TextView
            android:id="@+id/speedTitleGhost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_title"
            android:layout_below="@id/timeTitleGhost"
            android:textViewStyle="@style/displayRun"
            android:textColor="@color/colorGhostGrey" />

        <TextView
            android:id="@+id/showSpeedGhost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight ="true"
            android:layout_below="@id/showTimeGhost"
            android:text="0 min/km"
            android:textViewStyle="@style/displayRun"
            android:textColor="@color/colorGhostGrey" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutButtonsGhostCompete"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button android:id="@+id/startGhostCompeteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonStyle="@style/myButtons.green"
            android:text="@string/start_btn"
            android:onClick="startRun"
            android:layout_alignParentBottom ="true"
            android:layout_marginBottom="20dip" />

        <Button android:id="@+id/stopGhostCompeteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_btn"
            android:onClick="stopRun"
            android:layout_alignParentBottom ="true"
            android:buttonStyle="@style/myButtons.green"
            android:layout_marginBottom="20dip" />

        <Button android:id="@+id/pauseBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pause"
            android:onClick="pauseRun"
            android:layout_above="@id/stopGhostCompeteBtn"
            android:buttonStyle="@style/myButtons.green"
            android:layout_marginBottom="20dp" />

        <Button android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Continue"
            android:onClick="continueRun"
            android:layout_above="@id/stopGhostCompeteBtn"
            android:buttonStyle="@style/myButtons.green"
            android:layout_marginBottom="20dp" />

        <Button android:id="@+id/updateGhostCompeteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_btn"
            android:onClick="updateGhost"
            android:layout_above="@+id/saveRunGhostCompeteBtn"
            android:background="@drawable/button_selector_purple"
            android:layout_marginBottom="20dip"
            />

        <Button android:id="@id/saveRunGhostCompeteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/deleteGhostCompeteBtn"
            android:text="@string/save_ghost_compete_btn"
            android:onClick="saveRun"
            android:background="@drawable/button_selector_blue"
            android:layout_marginBottom="20dip"
             />

        <Button android:id="@+id/menuGhostCompeteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_btn"
            android:onClick="menu"
            android:layout_alignParentBottom ="true"
            android:buttonStyle="@style/myButtons.green"
            android:layout_marginBottom="20dip" />


        <Button android:id="@+id/deleteGhostCompeteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_btn"
            android:onClick="afterDelete"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_selector_red"
            android:layout_marginBottom="20dip"
            />

    </RelativeLayout>
</LinearLayout>
